$Id$

2017-10-08  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: 
	- Add TOSHIBA MQ03UBB... series (#901)
	- extend TOSHIBA THNSF regexp (#790)

2017-10-08  Christian Franke  <franke@computer.org>

	configure.ac: Check for compiler option to accept C++11.
	If none found, print warning and ask user to provide info.
	Add '--with-cxx11-option' to suppress this warning.
	This is intended to check whether C++11 could be used in some
	future smartmontools release.  The current build is not affected.

	configure.ac, Makefile.am: Add Windows VERSIONINFO resource also to
	runcmd*.exe and wtssendmsg.exe.  Include application manifests if
	needed.  This also fixes manifests with older MinGW binutils which
	do not support more than one resource objects.
	os_win32/smart*_res.rc.in: Replace by os_win32/versioninfo.rc.in.

2017-10-06  Christian Franke  <franke@computer.org>

	Makefile.am: Add PDF man page formatting.
	os_win32/installer.nsi: Add PDF man pages, remove TXT man pages.

	drivedb.h:
	- SMART Modular Technologies mSATA XL+ SSDs (patch from ticket #802)
	- StorFly CFast SATA: Add missing space.
	- Fix regexp from tickets #882, #885.

2017-10-05  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add StorFly CFast SATA 6Gbps SSDs (#911)

2017-10-05  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Red: WD80EFAX (tickets #857, #899)
	- USB: Toshiba Canvio (0x0480:0xb207)
	- USB: Apple/TOSHIBA MQ01UBB200 (0x05ac:0x8406)
	- USB: Seagate Expansion Portable 2TB (0x0bc2:0x231a)
	- USB: Maxtor M3 Portable 4TB (0x0bc2:0x61b7) (ticket #875)
	- USB: WD Elements / My Passport (0x1058:0x259f) (ticket #833)
	- USB: WD Elements / My Passport (0x1058:0x25e2)
	- USB: WD Elements / My Passport (0x1058:0x25fa) (ticket #840)
	- USB: WD My Book / Easystore (0x1058:0x1230) (ticket #835)
	- USB: WD My Book / Easystore (0x1058:0x25fb) (tickets #857, #899)
	- USB: JMicron JMS561U (0x152d:0x8561) (ticket #860)
	- USB: Innostor IS888 (0x1f75:0x0888): -d sat works (ticket #827)