@@ -1,5 +1,10 @@
 $Id$
 
+2017-10-09  Alex Samorukov <samm@os2.kiev.ua>
+
+	drivedb.h:
+	- Extend Seagate Barracuda 7200.12 regexp (#910)
+
 2017-10-08  Alex Samorukov <samm@os2.kiev.ua>
 
 	drivedb.h: 
